# greenhouse-controller-project

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  TestTask.cpp  TestTask.hpp  main.cpp
src/config/: FreeRTOSConfig.h  lwipopts_tls.h
src/display/: ssd1306os.cpp  ssd1306os.h
src/fan/: Controller.cpp  Controller.hpp  MIO12V.cpp  MIO12V.hpp
src/gpio/: Buttons.cpp  Buttons.hpp  GpioInput.hpp  RotaryEncoder.cpp  RotaryEncoder.hpp
src/i2c/: PicoI2C.cpp  PicoI2C.hpp
src/ipstack/: IPStack.cpp  IPStack.h  picow_tls_client.c
src/modbus/: Client.cpp  Client.hpp  MbClient.cpp  MbClient.hpp  Register.cpp  Register.hpp
src/network/: NetData.hpp  NetHeader.hpp  TlsClient.cpp  TlsClient.hpp
src/semaphore/: Binary.cpp  Binary.hpp  Mutex.cpp  Mutex.hpp
src/sensor/: BaseSensor.hpp  GMP252.cpp  GMP252.hpp  HMP60.cpp  HMP60.hpp  Handler.cpp  Handler.hpp  Reader.cpp  Reader.hpp  Register32bit.hpp  SDP600.cpp  SDP600.hpp  SensorData.hpp
src/storage/: Eeprom.cpp  Eeprom.hpp
src/task/: BaseTask.cpp  BaseTask.hpp  EncoderTask.cpp  EncoderTask.hpp  SensorReader.hpp
src/task/co2/: Co2Controller.cpp  Co2Controller.hpp
src/task/fan/: FanController.cpp  FanController.hpp
src/task/gpio/: Input.cpp  Input.hpp
src/task/localUI/: LocalUI.cpp  LocalUI.hpp  MenuVariables.hpp  localUI.cpp  localUI.hpp
src/task/network/: Manager.cpp  Manager.hpp
src/task/sensor/: Reader.cpp  Reader.hpp
src/timer/: CounterTimeout.cpp  CounterTimeout.hpp  DelayTimeout.cpp  DelayTimeout.hpp  Timeout.cpp  Timeout.hpp
src/uart/: PicoOsUart.cpp  PicoOsUart.hpp
src/view/: CharacterSet.hpp  SensorView.cpp  SensorView.hpp  TsSetup.cpp  TsSetup.hpp  WifiSetup.cpp  WifiSetup.hpp
